--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 title: jscheng
 subtitle: ''
 description: 'jscheng 的博客'
-keywords: 'jscheng,博客'
+keywords: 'jscheng,博客1'
 author: jscheng
 language: zh-CN
 timezone: ''
